src/components/Card/Card.module.scss
.card {
  border: 1px solid var(--grey);
  border-radius: 0.5rem;
  box-shadow: 2px 1px 3px 2px rgba(224, 224, 224, 0.5);
  overflow: hidden;
  position: relative;
  width: 100%;

  &:hover {
    img {
      opacity: 0.5;
    }

    .caption {
      display: flex;
    }

    .title {
      opacity: 0.2;
    }
  }
}

.title {
  display: block;
  text-align: center;
}

.contents {
  padding: 1rem;
}

.figure {
  min-height: 150px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.image {
  font-size: var(--fontSizeSmall);
  font-weight: normal;
  height: 150px;
  object-fit: cover;
  object-position: center;
  text-align: center;
  width: 100%;

  &::before {
    display: block;
    padding: 1rem 1.5rem;
  }
}

.caption {
  background-color: var(--violet);
  color: var(--white);
  display: none;
  flex-direction: column;
  justify-content: space-between;
  font-size: var(--fontNormal);
  font-weight: normal;
  height: 100%;
  opacity: 0.9;
  padding: 1rem;
  position: absolute;
  top: 0;
  white-space: pre-wrap;
  width: 100%;
}

.credit {
  font-size: var(--fontSizeSmall);
}

